--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "18.2.0",
     "clsx": "1.2.1",
     "js-yaml": "4.1.0",
-    "@mdx-js/react": "2.4.0"
+    "@mdx-js/react": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
@@ -26,8 +26,7 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
     "@types/js-yaml": "4.0.8",
-    "ts-node": "10.9.2"
-    ,
+    "ts-node": "10.9.2",
     "@next/mdx": "14.0.0"
   }
 }
