feat: add @mdx-js/loader to devDependencies

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "18.2.9",
     "@types/js-yaml": "4.0.8",
     "ts-node": "10.9.2",
-    "@next/mdx": "14.0.0"
+    "@next/mdx": "14.0.0",
+    "@md,x-js/loader": "^3.1.0"
   }
 }
