--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "@types/js-yaml": "4.0.8",
     "ts-node": "10.9.2",
     "@next/mdx": "14.0.0",
-    "@md,x-js/loader": "^3.1.0"
+    "@mdx-js/loader"" "^3.1.0"
   }
 }
