fix: quote colon-containing YAML role values and correct indentations

--- a/content/papers.yaml
+++ b/content/papers.yaml
@@ -30,13 +30,13 @@ papers:
       - problem:mathematical-foundations
 
   - id: paper:zenodo:18092342
-    zenodo: 18092342
+  zenodo: 18092342
     visibility: public
-    role: Canonical Λ-field: uniqueness and dissipative generators
+   role: "Canonical Λ-field: uniqueness and dissipative generators"
     supports:
       - problem:cosmological-constant
 
-  - id: paper:zenodo:18092618
+ - id: paper:zenodo:18092618
     zenodo: 18092618
     visibility: public
     role: Universal spectral budget via Λ-profiles
@@ -133,7 +133,7 @@ papers:
   - id: paper:zenodo:18356771
     zenodo: 18356771
     visibility: public
-    role: Packet-level translation: normalization/persistence/closure in Navier–Stokes theory
+    role: "Packet-level translation: normalization/persistence/closure in Navier–Stokes theory"
     supports:
       - problem:navier-stokes
 
