--- a/content/problems.yaml
+++ b/content/problems.yaml
@@ -1,6 +1,6 @@
 version: 1
 problems:
-  - id: problem:standard-model
+  - id: standard-model
     slug: standard-model
     title: Standard Model of Particle Physics
     domain: Physics
