--- a/content/problems.yaml
+++ b/content/problems.yaml
@@ -6,6 +6,7 @@ problems:
     domain: Physics
     status: public
     maturity: complete
+    manualPath: true
     direct_answer: >
       Law-level derivation of the Standard Model gauge group, fermion content, anomaly cancellation,
       and family multiplicity from Tier–0 closure and admissibility.
