Add MDX sanity test problem + minimal MDX

--- a/content/problems.yaml
+++ b/content/problems.yaml
@@ -143,3 +143,11 @@ problems:
     connections_hint:
       - problem:mathematical-foundations
       - problem:standard-model
+
+      - id: mdx-sanity-test
+        slug: mdx-sanity-test
+        title: MDX Sanity Test
+        domain: Test
+        status: public
+        maturity: draft
+        direct_answer: Sanity test for manual MDX rendering pipeline.
