--- a/content/papers.yaml
+++ b/content/papers.yaml
@@ -136,6 +136,13 @@ papers:
     role: "Packet-level translation: normalization/persistence/closure in Navier–Stokes theory"
     supports:
       - problem:navier-stokes
+
+  - id: paper:zenodo:17550178
+    zenodo: 17550178
+    visibility: public
+    role: "Cosmological Constant Problem via Spectral Thermodynamic Invariance"
+    supports:
+      - problem:cosmological-constant    
       
      
   - id: paper:zenodo:UNKNOWN_GENERATIONS_DOI
