--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "everythingequation-site",
-  "version": "0.1.0",
+   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,9 +12,14 @@
   "dependencies": {
     "next": "14.2.25",
     "react": "18.2.0",
+    "js-yaml": "4.1.0",
+    "remark-math": "^6.0.0",
+    "rehype-katex": "^7.0.0",
+    "katex": "^0.16.8",
+
     "react-dom": "18.2.0",
     "clsx": "1.2.1",
-    "js-yaml": "4.1.0",
+
     "@mdx-js/react": "^3.1.0"
   },
   "devDependencies": {
