--- a/content/papers.yaml
+++ b/content/papers.yaml
@@ -150,6 +150,7 @@ papers:
     role: Dark energy as a closure background (Tier-0 law-level classification)
     supports:
       - problem:cosmological-constant
+      - problem:dark-sector
 
   - id: paper:zenodo:18261716
     zenodo: 18261716
@@ -157,6 +158,7 @@ papers:
     role: Dark matter as record-silent curvature (law-level classification within Tier-0)
     supports:
       - problem:cosmological-constant
+      - problem:dark-sector
 
   - id: paper:zenodo:18298571
     zenodo: 18298571
@@ -164,6 +166,7 @@ papers:
     role: Dark matter, light, and computation as projections of a single lawful structure
     supports:
       - problem:cosmological-constant
+      - problem:dark-sector
 
   - id: paper:zenodo:18073598
     zenodo: 18073598
