--- a/content/papers.yaml
+++ b/content/papers.yaml
@@ -195,6 +195,19 @@ papers:
 
 
   # =========================
+  # Tier-1 Dynamical Realization (Dirac–Λ)
+  # =========================
+  - id: paper:zenodo:18688812
+    zenodo: 18688812
+    visibility: public
+    role: "A Coupled Dirac–Λ Dynamical System: Constrained Spectral Unification with Structural Consequences"
+    supports:
+      - problem:cosmological-constant
+      - problem:quantum-gravity
+      - problem:quantum-measurement
+
+
+  # =========================
   # Quantum Gravity / Spacetime / Observer stack
   # =========================
   - id: paper:zenodo:18384959
