--- a/content/papers.yaml
+++ b/content/papers.yaml
@@ -315,6 +315,16 @@ papers:
     role: Structural Vanishing of the Strong CP Phase in the Coupled Dirac–Λ Framework
     supports:
       - problem:standard-model
+      - problem:strong-cp
+
+  - id: paper:zenodo:18721002
+    zenodo: 18721002
+    visibility: public
+    role: No-Go Theorem for Exact Yukawa Prediction in the Capacity-Coupled Dirac–Λ Framework
+    supports:
+      - problem:standard-model
+      - problem:grand-unified-theory
+      - problem:yukawa-prediction
 
   - id: paper:zenodo:18474556
     zenodo: 18474556
